[package]
name = "rhizome"
version = "0.1.0"
edition = "2024"

[lib]
name = "rhizome"
crate-type = ["cdylib", "rlib"]
path = "src/api.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
instant = { version = "0.1", features = ["wasm-bindgen"] }
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-appender = "0.2"
chrono = "0.4"
serde_yaml = "0.9"
dotenvy = "0.15"
rmp-serde = "1.3"
heed = "0.20.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
fs2 = "0.4"
hex = "0.4.3"
rsa = { version = "0.9", features = ["sha2"] }
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["run-cargo-fmt", "run-cargo-clippy"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }