[package]
name = "rhizome-p2p"
version = "0.0.2"
edition = "2024"
authors = ["Kostya Betenya <betenya.kostya@mail.ru>"]
description = "Distributed P2P networking library for the Rhizome ecosystem"
documentation = "https://docs.rs/rhizome-p2p"
repository = "https://github.com/vazonhub/rhizome"
readme = "README.md"
license = "Apache-2.0"
keywords = ["p2p", "networking", "distributed", "rhizome"]
categories = ["network-programming", "asynchronous"]

[lib]
name = "rhizome_p2p"
crate-type = ["cdylib", "rlib"]
path = "src/api.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
instant = { version = "0.1", features = ["wasm-bindgen"] }
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-appender = "0.2"
chrono = "0.4"
serde_yaml = "0.9"
dotenvy = "0.15"
rmp-serde = "1.3"
heed = "0.20.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
fs2 = "0.4"
hex = "0.4.3"
rsa = { version = "0.9", features = ["sha2"] }
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["run-cargo-fmt", "run-cargo-clippy"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg", "docsrs",
#    "--html-in-header", "docs/assets/header.html",
#    "--html-after-content", "docs/assets/footer.html",
#    "--index-page", "docs/overview.md",
    "--enable-index-page",
]