[package]
name = "rhizome-p2p"
version = "0.0.4"
edition = "2024"
authors = ["Kostya Betenya <betenya.kostya@mail.ru>"]
description = "Distributed P2P networking library for the Rhizome ecosystem"
documentation = "https://docs.rs/rhizome-p2p"
repository = "https://github.com/vazonhub/rhizome"
readme = "README.md"
license = "Apache-2.0"
keywords = ["p2p", "networking", "distributed", "rhizome"]
categories = ["network-programming", "asynchronous"]

[lib]
name = "rhizome_p2p"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/api.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
serde_yaml = "0.9"
dotenvy = "0.15"
rmp-serde = "1.3"
heed = "0.22.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
fs2 = "0.4"
hex = "0.4.3"
rsa = { version = "0.9.10", features = ["sha2"] }
sha1 = "0.10"
sha2 = "0.10"
uniffi = { version = "0.31", features = ["tokio", "cli"] }

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg", "docsrs",
    "--enable-index-page",
]